--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "@spibo-studio/spibo-studio",
   "version": "0.0.1",
   "description": "Spibo Studio is an HTML Canvas Library for creating adventure games",
-  "main": "dist/app.js",
+  "main": "dist/spibo-studio.js",
+  "types": "dist/spibo-studio.d.ts",
   "files": [
     "build/**/*"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": " rm -R ./dist/* && tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
