--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,14 +69,13 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "lib": [
-    "es2015"
-  ],
+  "lib": ["es2017", "es7", "es6", "dom"],
   "include": [
     "src"
   ],
   "exclude": [
     "node_modules",
-    "tests"
+    "tests",
+    "dist"
   ]
 }
