--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spibo-studio/spibo-studio",
-  "version": "0.0.12",
+  "version": "0.0.2",
   "description": "Spibo Studio is an HTML Canvas Library for creating adventure games",
   "main": "dist/spibo-studio.js",
   "types": "dist/spibo-studio.d.ts",
@@ -39,10 +39,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2",
     "typescript": "^3.5.3"
   },
