--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -30,10 +29,24 @@
     "prettier"
   ],
   "rules": {
+    "import/extensions": [
+      "error",
+      "always",
+      {
+        "ts": "never"
+      }
+    ],
     "no-console": 0,
     "prettier/prettier": "error",
     "no-underscore-dangle": "off",
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-inferrable-types": [
+      2,
+      {
+        "ignoreParameters": true,
+        "ignoreProperties": true
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
@@ -46,5 +59,8 @@
         ]
       }
     }
-  }
+  },
+  "ignorePatterns": [
+    "dist/**"
+  ]
 }
