Correction de règles et de paramétrage de fonction. Redonner le numéro de version la plus récente sur npm

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,15 @@
     "prettier/prettier": "error",
     "no-underscore-dangle": "off",
     "no-useless-constructor": "off",
+    "@typescript-eslint/ban-types": [
+      "error",
+      {
+        "types": {
+          "Function": false
+        },
+        "extendDefaults": true
+      }
+    ],
     "@typescript-eslint/no-inferrable-types": [
       2,
       {
